--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialize=true
 spring.datasource.tomcat.max-active=1
 spring.datasource.tomcat.validation-query=SELECT 1
-spring.datasource.tomcat.
+#spring.datasource.tomcat.
