--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
 
         <!--Telegram-->
         <telegram.version>3.6</telegram.version>
+
+        <!--TomCat-->
+        <jackson.version>2.9.0</jackson.version>
+
         <!--Tests  -->
         <junit.version>4.12</junit.version>
     </properties>
@@ -154,6 +158,19 @@
             <version>${telegram.version}</version>
         </dependency>
 
+        <!--TomCat-->
+        <!--need for start tomcat on deployment server-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
         <!--Test-->
         <dependency>
             <groupId>junit</groupId>
@@ -171,18 +188,6 @@
             <artifactId>assertj-core</artifactId>
             <version>3.8.0</version>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.9.0</version>
         </dependency>
     </dependencies>
 
