heroku host setting mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 spring.main.banner-mode=off
 
 #MySQL database properties
-#spring.datasource.url=jdbc:mysql://rqde7fdjq5r7ryiz:ozgczi5rgvgk6xiq@r42ii9gualwp7i1y.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/hut62pd106d2or2q?useSSL=false
-#spring.datasource.username=rqde7fdjq5r7ryiz
-#spring.datasource.password=ozgczi5rgvgk6xiq
+spring.datasource.url=jdbc:mysql://gp96xszpzlqupw4k.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/j3bjkyqh0v4jaous?useSSL=false
+spring.datasource.username=nbz2x7ldle0b4cuv
+spring.datasource.password=hjzwvyf0jxtunmoj
 
-spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11223717?useSSL=false
-spring.datasource.username=sql11223717
-spring.datasource.password=BtFgJ8h6IV
+#spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11223717?useSSL=false
+#spring.datasource.username=sql11223717
+#spring.datasource.password=BtFgJ8h6IV
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialize=true
