--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,7 @@ spring.datasource.tomcat.validation-query=SELECT 1
 
 
 server.port=8443
-#server.ssl.key-store=classpath:crt/certificate.pfx
-#server.ssl.key-store-password=654321
-#server.ssl.key-alias=xmpptelegram.herokuapp.com
-#server.ssl.key-password=
-#server.ssl.client-auth=need
-##server.ssl.trust-store=truststore.jks
-##server.ssl.trust-store-password=
+
+telegram.token=404271554:AAHHiJHuFsiriACE9u2pV4_3MuENDKcZnKw
+telegram.username=ifoxjabberbot
+telegram.path=
