--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ server.port=8443
 
 telegram.token=404271554:AAHHiJHuFsiriACE9u2pV4_3MuENDKcZnKw
 telegram.username=ifoxjabberbot
-telegram.path=t.me/ifoxjabberbot
+telegram.path=t.me/ifoxjabberbot404271554:AAHHiJHuFsiriACE9u2pV4_3MuENDKcZnKw
