--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,7 @@ spring.datasource.initialize=true
 spring.datasource.tomcat.max-active=1
 spring.datasource.tomcat.validation-query=SELECT 1
 
-
-server.port=8443
+#server.port=443
 
 telegram.token=404271554:AAHHiJHuFsiriACE9u2pV4_3MuENDKcZnKw
 telegram.username=ifoxjabberbot
