--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.datasource.tomcat.validation-query=SELECT 1
 telegram.token=404271554:AAHHiJHuFsiriACE9u2pV4_3MuENDKcZnKw
 telegram.username=ifoxjabberbot
 telegram.path=https://xmpptelegram.herokuapp.com/
+
+logging.level.XMPP_Telegram=info
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+logging.file=/logs/application.log
