--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,22 @@ spring.main.banner-mode=off
 spring.datasource.url=jdbc:mysql://gp96xszpzlqupw4k.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/j3bjkyqh0v4jaous?useSSL=false
 spring.datasource.username=nbz2x7ldle0b4cuv
 spring.datasource.password=hjzwvyf0jxtunmoj
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11223717?useSSL=false
 #spring.datasource.username=sql11223717
 #spring.datasource.password=BtFgJ8h6IV
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.initialize=true
+#spring.datasource.initialization-mode=never
 spring.datasource.tomcat.max-active=1
+spring.datasource.tomcat.test-on-borrow=true
+spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
+
+
 
 #server.port=443
 
