--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.datasource.tomcat.max-active=1
 spring.datasource.tomcat.test-on-borrow=true
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
+spring.datasource.initialization-mode=always
 
 #server.port=443
 
