--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,16 @@
 spring.main.banner-mode=off
 
 #MySQL database properties
-#spring.datasource.url=jdbc:mysql://gp96xszpzlqupw4k.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/j3bjkyqh0v4jaous?useSSL=false
-#spring.datasource.username=nbz2x7ldle0b4cuv
-#spring.datasource.password=fl37ycx0kajf2x7z
+spring.datasource.url=jdbc:mysql://gp96xszpzlqupw4k.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/j3bjkyqh0v4jaous?useSSL=false
+spring.datasource.username=nbz2x7ldle0b4cuv
+spring.datasource.password=fl37ycx0kajf2x7z
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11223717?useSSL=false
-spring.datasource.username=sql11223717
-spring.datasource.password=BtFgJ8h6IV
+#spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11223717?useSSL=false
+#spring.datasource.username=sql11223717
+#spring.datasource.password=BtFgJ8h6IV
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.tomcat.max-active=1
