--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,17 @@
 spring.main.banner-mode=off
 
 #MySQL database properties
-#spring.datasource.url=jdbc:mysql://gp96xszpzlqupw4k.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/j3bjkyqh0v4jaous?useSSL=false
-#spring.datasource.username=nbz2x7ldle0b4cuv
-#spring.datasource.password=fl37ycx0kajf2x7z
+#spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11223717?autoReconnect=true&useSSL=false
+#spring.datasource.username=sql11223717
+#spring.datasource.password=BtFgJ8h6IV
+
+spring.datasource.url=jdbc:mysql://localhost:3306/jabber?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=aeSee6meexai
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-
-spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11223717?useSSL=false
-spring.datasource.username=sql11223717
-spring.datasource.password=BtFgJ8h6IV
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.tomcat.max-active=10
 spring.datasource.tomcat.test-on-borrow=true
@@ -20,12 +20,19 @@ spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
 #spring.datasource.initialization-mode=always
 
-#server.port=443
+#https server properties
+server.port=8443
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:https/keystore.p12
+server.ssl.key-password=password
+server.ssl.key-alias=tomact
 
+#logging properties
 logging.level.XMPP_Telegram=info
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file=/logs/application.log
 
+#telegram-bot properties
 telegram.token=404271554:AAHHiJHuFsiriACE9u2pV4_3MuENDKcZnKw
-telegram.username=ifoxjabberbot
-telegram.path=https://xmpptelegram.herokuapp.com/
+telegram.username=ifoxXMPPbot
+telegram.path=https://x1.coverit.pro:8443/
