--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,9 @@
 spring.main.banner-mode=off
 
 #MySQL database properties
-#spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11223717?autoReconnect=true&useSSL=false
-#spring.datasource.username=sql11223717
-#spring.datasource.password=BtFgJ8h6IV
-
-spring.datasource.url=jdbc:mysql://localhost:3306/jabber?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=aeSee6meexai
-
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/jabberbot?autoReconnect=true&useSSL=false&serverTimezone=Europe/Moscow
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -19,20 +13,24 @@ spring.datasource.tomcat.test-on-borrow=true
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
 #spring.datasource.initialization-mode=always
+#spring.jpa.show-sql=true
 
 #https server properties
 server.port=8443
+server.ssl.key-alias=tomcat
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:https/keystore.p12
+server.ssl.key-store-password=password
 server.ssl.key-password=password
-server.ssl.key-alias=tomact
+server.ssl.protocol=TLS
 
 #logging properties
-logging.level.XMPP_Telegram=info
+logging.level.xmpptelegram=WARN
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
-logging.file=/logs/application.log
+logging.file=logs/application.log
 
 #telegram-bot properties
-telegram.token=404271554:AAHHiJHuFsiriACE9u2pV4_3MuENDKcZnKw
-telegram.username=ifoxXMPPbot
-telegram.path=https://x1.coverit.pro:8443/
+telegram.token=
+telegram.username=
+telegram.path=
+telegram.cert=classpath:https/keystore.pem
