--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 #disbale Spring banner
 spring.main.banner-mode=off
-
 #MySQL database properties
-spring.datasource.url=jdbc:mysql://localhost:3306/jabberbot?autoReconnect=true&useSSL=false&serverTimezone=Europe/Moscow
-spring.datasource.username=
+#spring.datasource.url=jdbc:mysql://localhost:3306/jabberbot?autoReconnect=true&useSSL=false&serverTimezone=Europe/Moscow
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://localhost:3306/jabber?autoReconnect=true&useSSL=false&serverTimezone=Europe/Moscow
+#spring.datasource.username=root
+#spring.datasource.password=aeSee6meexai
+#HSQLDB database properties
+spring.datasource.url=jdbc:hsqldb:mem:topjava
+spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
+spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,7 +22,6 @@ spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
 #spring.datasource.initialization-mode=always
 #spring.jpa.show-sql=true
-
 #https server properties
 server.port=8443
 server.ssl.key-alias=tomcat
@@ -23,12 +30,10 @@ server.ssl.key-store=classpath:https/keystore.p12
 server.ssl.key-store-password=password
 server.ssl.key-password=password
 server.ssl.protocol=TLS
-
 #logging properties
-logging.level.xmpptelegram=WARN
-logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+logging.level.xmpptelegram=debug
+logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file=logs/application.log
-
 #telegram-bot properties
 telegram.token=
 telegram.username=
