--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.tomcat.max-active=10
 spring.datasource.tomcat.test-on-borrow=true
 spring.datasource.tomcat.test-while-idle=true
@@ -35,7 +35,7 @@ logging.level.xmpptelegram=debug
 logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file=logs/application.log
 #telegram-bot properties
-telegram.token=
-telegram.username=
-telegram.path=
-telegram.cert=classpath:https/keystore.pem
+telegram.token=627951755:AAGJ6gsR3Zso7AItQb0if3NZgp8U7K5hjrc
+telegram.username=testXMPPbot
+telegram.path=https://teelegramtestbot.herokuapp.com:443/
+#telegram.cert=classpath:https/keystore.pem
