--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,13 +23,13 @@ spring.datasource.tomcat.validation-query=SELECT 1
 #spring.datasource.initialization-mode=always
 #spring.jpa.show-sql=true
 #https server properties
-server.port=8443
-server.ssl.key-alias=tomcat
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:https/keystore.p12
-server.ssl.key-store-password=password
-server.ssl.key-password=password
-server.ssl.protocol=TLS
+#server.port=8443
+#server.ssl.key-alias=tomcat
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=classpath:https/keystore.p12
+#server.ssl.key-store-password=password
+#server.ssl.key-password=password
+#server.ssl.protocol=TLS
 #logging properties
 logging.level.xmpptelegram=debug
 logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
