fix bugs, new library

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,8 @@ spring.main.banner-mode=off
 #spring.datasource.url=jdbc:mysql://localhost:3306/jabberbot?autoReconnect=true&useSSL=false&serverTimezone=Europe/Moscow
 #spring.datasource.username=root
 #spring.datasource.password=123456
-#spring.datasource.url=jdbc:mysql://localhost:3306/jabber?autoReconnect=true&useSSL=false&serverTimezone=Europe/Moscow
-#spring.datasource.username=root
-#spring.datasource.password=aeSee6meexai
 #HSQLDB database properties
-spring.datasource.url=jdbc:hsqldb:mem:topjava
+spring.datasource.url=jdbc:hsqldb:mem:xmpptelegram
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
@@ -35,7 +32,7 @@ logging.level.xmpptelegram=debug
 logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file=logs/application.log
 #telegram-bot properties
-telegram.token=627951755:AAGJ6gsR3Zso7AItQb0if3NZgp8U7K5hjrc
-telegram.username=testXMPPbot
-telegram.path=https://teelegramtestbot.herokuapp.com:443/
+telegram.token=
+telegram.username=
+telegram.path=
 #telegram.cert=classpath:https/keystore.pem
